2008-11-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerWindow.m ([XGServer -windowlist]): Implement
	a fix for bug #24707.

2008-11-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tools/gpbs.m (init): Don't change SIGABRT handler to prevent
	infinite recursion on abort().

	* Tools/xpbs.m (+receivedEvent:type:extra:forMode:): Don't cache
	number of pending events. Prevents an issue where gpbs could block
	in XNextEvent and other applications contacting the pasteboard
	server become unresponsive.

2008-11-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoContext.m (-GSDrawImage::): Convert the
	bitmap, when the format is unsupported.

2008-10-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XWindowBuffer.m (test_xshm): Check whether the X
	server supports shm pixmaps.

2008-10-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-setalpha::): Implement transparent
	windows.
        * Source/winlib/WIN32GState.m (-DPSimage:...:): Call
	SetStretchBltMode() before scaling a bitmap.
	
2008-10-24 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m (+initializePasteboard): Use XInternAtom when
	XInternAtoms isn't available.
	Patch by Riccardo Mottola <multix@ngi.it>.
	* configure.ac: Check for XInternAtoms.
	* configure,
	* config.h.in: Regenerate.

2008-10-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServer.m (-visualForScreen:, -depthForScreen:):
	New methods that hide RContext details.
	* Headers/x11/XGServer.h: Declare these new methods.
	* Source/x11/XWindowBuffer.m: Get the default visual and depth
	from the XGServer.

2008-10-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_checkStyle:): Correct code
	for double parent handling.
	Patch by Wolfgang Lux <wolfgang.lux@gmail.com>.

2008-10-17 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/win32/WIN32Geometry.h (MSScreenRectToGS, GSScreenRectToMS),
	* Source/win32/WIN32Server.m,
	* Source/win32/w32_movesize.m: